package com.flow.data.local

enum class TaskStatus {
    TODO,
    IN_PROGRESS,
    COMPLETED
}
